# agent-show

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
crates/agent-show-aider/: Cargo.toml
crates/agent-show-aider/src/: lib.rs
crates/agent-show-claude/: Cargo.toml
crates/agent-show-claude/src/: lib.rs
crates/agent-show-codex/: Cargo.toml
crates/agent-show-codex/src/: lib.rs
crates/agent-show-comate/: Cargo.toml
crates/agent-show-comate/src/: lib.rs
crates/agent-show-copilot/: Cargo.toml
crates/agent-show-copilot/src/: events.rs  lib.rs  lock.rs  watcher.rs  workspace.rs
crates/agent-show-core/: Cargo.toml
crates/agent-show-core/src/: adapter.rs  error.rs  lib.rs  pricing.rs
crates/agent-show-gemini/: Cargo.toml
crates/agent-show-gemini/src/: lib.rs
crates/agent-show-opencode/: Cargo.toml
crates/agent-show-opencode/src/: lib.rs
crates/agent-show-server/: Cargo.toml  build.rs
crates/agent-show-server/src/: api.rs  assets.rs  cache.rs  env_quota.rs  hidden.rs  labels.rs  lib.rs  multi.rs  my_skills.rs  skills.rs  sse.rs  store.rs  sync.rs  ws.rs
crates/pawscope-claude/src/: lib.rs
crates/pawscope-comate/: Cargo.toml
crates/pawscope-comate/src/: lib.rs
crates/pawscope-copilot/src/: events.rs  lib.rs
crates/pawscope-core/src/: types.rs
crates/pawscope-server/: Cargo.toml
crates/pawscope-server/src/: api.rs  auth.rs  cache.rs  env_quota.rs  lib.rs  skills.rs  store.rs  sync.rs
docs/launch/: v1.0-launch-posts.md
e2e/: dashboard.spec.ts  screenshots.spec.ts  snap.spec.ts
scripts/: gen-demo-home.py
src/: main.rs
tests/: cross_agent_conversation.rs  token_usage.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  i18n.ts  main.tsx  progress.ts  styles.css  toast.ts
web/src/components/: AnalyticsPanel.tsx  ConfigPanel.tsx  ConversationFlow.tsx  ErrorBoundary.tsx  LivePin.tsx  OverviewPanel.tsx  PromptsPanel.tsx  RealmPanel.tsx  SessionList.tsx  Skeleton.tsx  SkillsPanel.tsx  ThemeToggle.tsx  ToastContainer.tsx
