[workspace]
resolver = "2"
members = ["crates/pawscope-core", "crates/pawscope-copilot", "crates/pawscope-claude", "crates/pawscope-codex", "crates/pawscope-opencode", "crates/pawscope-gemini", "crates/pawscope-aider", "crates/pawscope-server"]

[workspace.package]
version = "1.11.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "pawscope"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pawscope"
path = "src/main.rs"

[dependencies]
pawscope-core = { path = "crates/pawscope-core" }
pawscope-copilot = { path = "crates/pawscope-copilot" }
pawscope-claude = { path = "crates/pawscope-claude" }
pawscope-codex = { path = "crates/pawscope-codex" }
pawscope-opencode = { path = "crates/pawscope-opencode" }
pawscope-gemini = { path = "crates/pawscope-gemini" }
pawscope-aider = { path = "crates/pawscope-aider" }
pawscope-server = { path = "crates/pawscope-server" }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open = "5"

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
tokio.workspace = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
