[workspace]
resolver = "2"
members = ["crates/agent-show-core", "crates/agent-show-copilot", "crates/agent-show-claude", "crates/agent-show-codex", "crates/agent-show-opencode", "crates/agent-show-gemini", "crates/agent-show-aider", "crates/agent-show-comate", "crates/agent-show-server"]

[workspace.package]
version = "1.11.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "agent-show"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-show"
path = "src/main.rs"

[dependencies]
agent-show-core = { path = "crates/agent-show-core" }
agent-show-copilot = { path = "crates/agent-show-copilot" }
agent-show-claude = { path = "crates/agent-show-claude" }
agent-show-codex = { path = "crates/agent-show-codex" }
agent-show-opencode = { path = "crates/agent-show-opencode" }
agent-show-gemini = { path = "crates/agent-show-gemini" }
agent-show-aider = { path = "crates/agent-show-aider" }
agent-show-comate = { path = "crates/agent-show-comate" }
agent-show-server = { path = "crates/agent-show-server" }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open = "5"

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
tokio.workspace = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
