[package]
name = "agent-show-claude"
version.workspace = true
edition.workspace = true

[dependencies]
agent-show-core = { path = "../agent-show-core" }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt", "macros", "time"] }
notify = "6"
tracing.workspace = true
async-trait = "0.1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
