[package]
name = "agent-show-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }
