[package]
name = "pawscope-server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
pawscope-core = { path = "../pawscope-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
rust-embed = "8"
mime_guess = "2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
hostname = "0.4"

[dev-dependencies]
